--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -43,7 +43,7 @@
                     (searchTriggerred)='callNewSearch()' (previousPageCalled)='prevPg()'
                     (tabSelected)='tabValChange($event)' [headerColName]="'Policy Severity'" (nextPageCalled)='nextPg()'
                     [direction]='-1' [tabFilterProperty]="'Rule Category'"
-                    [columnWhiteList]="['Policy Title', 'Compliance %', 'Policy Severity', 'Last Scanned']"
+                    [columnWhiteList]="['Policy Title', 'Compliance %', 'Policy Severity', 'Rule Category','Last Scanned']"
                     [paginatorAbsent]='true' [popRows]='popRows' (rowClickText)='handlePopClick($event)'
                     [searchPassed]='searchPassed'>
                 </app-data-table>
