--- a/webapp/src/app/post-login-app/common/header/header.component.html
+++ b/webapp/src/app/post-login-app/common/header/header.component.html
@@ -19,7 +19,7 @@
   <div class="header-user-wrapper">
     <div class="header-user-content-wrapper">
       <div class="user-image-wrapper">
-        <img src="/assets/images/user-image.png" alt="" />
+        <h3>{{userName[0]}}</h3>
       </div>
       <div class="user-info-wrapper">
         <div class="user-name">{{userName}}</div>
