--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -13,35 +13,37 @@
  -->
 
 <div class="violations-table" [class.admin-rights]='adminAccess'>
-    <div class="flex flex-align-center" style="padding-bottom: 18px; " *ngIf="backButtonRequired">
-        <img class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
-        <h1 class="title-text nowrap-ellipsis">{{pageTitle}}</h1>
+    <div class="wrapper">
+        <div class="flex flex-align-center" style="padding-bottom: 18px; " *ngIf="backButtonRequired">
+            <img class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+            <h1 class="title-text nowrap-ellipsis">{{pageTitle}}</h1>
+        </div>
+        <app-data-table [(cbModel)]="cbModel" (cbClicked)="checkBoxClicked($event)" [checkBox]="adminAccess"
+            [searchTextValues]="searchTxt" [showGenericMessage]="showGenericMessage" [errorValue]="errorValue"
+            [parentName]="'policyDetailsTableMessage'" [showingArr]="showingArr" [outerArr]="outerArr"
+            [searchableHeader]="true" [allColumns]="allColumns" [dataHead]="'Policy Violations'"
+            (selectedRow)="goToDetails($event)" [columnWhiteList]="[
+                      'Policy Name',
+                      'Issue ID',
+                      'Resource ID',
+                      'Status',
+                      'Severity',
+                      'Rule Category'
+                    ]" [firstPaginator]="firstPaginator" [lastPaginator]="lastPaginator" [totalRows]="totalRows"
+            [currentPointer]="currentPointer" (searchRowTxt)="searchCalled($event)" (previousPageCalled)="prevPg()"
+            (nextPageCalled)="nextPg()" (searchTriggerred)="callNewSearch()"
+            (showExceptionModalEventEmitter)="showExceptionModal($event)" [popRows]="popRows" [checkedList]="cbArr"
+            (rowClickText)="handlePopClick($event)" (paginatorSizeSelectedEventEmitter)="
+                      handlePaginatorSizeSelection($event)
+                    " [paginatorSize]="paginatorSize" (addFilterClicked)="handleAddFilterClick($event)"
+            [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
+            (removeAllCheckedEventEmitter)="handleRemoveAllChecked($event)" (selectedFilterType)='changeFilterType($event)'
+            (selectedFilter)="changeFilterTags($event)" (deleteAllFilters)="deleteFilters($event)"
+            (deleteFilter)="deleteFilters($event)" [filteredArray]="filters">
+        </app-data-table>
+        <app-issue-exception *ngIf="adminAccess && showExceptionalModal" [issueList]="cbArr"
+            [exceptionAction]="exceptionAction" (closeExceptionalModal)="closeExceptionalModal($event)"
+            (refreshDataTable)="refreshDataTable($event)">
+        </app-issue-exception>
     </div>
-    <app-data-table [(cbModel)]="cbModel" (cbClicked)="checkBoxClicked($event)" [checkBox]="adminAccess"
-        [searchTextValues]="searchTxt" [showGenericMessage]="showGenericMessage" [errorValue]="errorValue"
-        [parentName]="'policyDetailsTableMessage'" [showingArr]="showingArr" [outerArr]="outerArr"
-        [searchableHeader]="true" [allColumns]="allColumns" [dataHead]="'Policy Violations'"
-        (selectedRow)="goToDetails($event)" [columnWhiteList]="[
-                  'Policy Name',
-                  'Issue ID',
-                  'Resource ID',
-                  'Status',
-                  'Severity',
-                  'Rule Category'
-                ]" [firstPaginator]="firstPaginator" [lastPaginator]="lastPaginator" [totalRows]="totalRows"
-        [currentPointer]="currentPointer" (searchRowTxt)="searchCalled($event)" (previousPageCalled)="prevPg()"
-        (nextPageCalled)="nextPg()" (searchTriggerred)="callNewSearch()"
-        (showExceptionModalEventEmitter)="showExceptionModal($event)" [popRows]="popRows" [checkedList]="cbArr"
-        (rowClickText)="handlePopClick($event)" (paginatorSizeSelectedEventEmitter)="
-                  handlePaginatorSizeSelection($event)
-                " [paginatorSize]="paginatorSize" (addFilterClicked)="handleAddFilterClick($event)"
-        [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
-        (removeAllCheckedEventEmitter)="handleRemoveAllChecked($event)" (selectedFilterType)='changeFilterType($event)'
-        (selectedFilter)="changeFilterTags($event)" (deleteAllFilters)="deleteFilters($event)"
-        (deleteFilter)="deleteFilters($event)" [filteredArray]="filters">
-    </app-data-table>
-    <app-issue-exception *ngIf="adminAccess && showExceptionalModal" [issueList]="cbArr"
-        [exceptionAction]="exceptionAction" (closeExceptionalModal)="closeExceptionalModal($event)"
-        (refreshDataTable)="refreshDataTable($event)">
-    </app-issue-exception>
 </div>
