--- a/webapp/src/app/shared/data-table/data-table.component.html
+++ b/webapp/src/app/shared/data-table/data-table.component.html
@@ -18,10 +18,10 @@
   <div class="sub-head">
     <app-title-burger-head [tableIdAppend]="tableIdAppend" (rowText)="emitRowText($event)" [popRows]="popRows"
       [showSearch]="searchableHeader" [subHeadTitle]="dataHead" (searchTxt)="searchCalled($event)"
-      (enterPressed)="triggerSearch()">
+      (enterPressed)="triggerSearch()" [doNotDisplaySearch]="doNotDisplaySearch">
     </app-title-burger-head>
   </div>
-  <div class="add-filter-container" *ngIf="checkedList.length == 0 && dataHead=='Policy Violations'">
+  <div class="add-filter-container" *ngIf="checkedList.length == 0 && doNotDisplaySearch">
     <div class="add-filter-wrapper">
       <div class="add-filter-button-wrapper">
         <button [matMenuTriggerFor]="menu" class="add-filter-button">
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-  <div class="alternate-filter-container" *ngIf="checkedList.length > 0 && dataHead=='Policy Violations'">
+  <div class="alternate-filter-container" *ngIf="checkedList.length > 0 && doNotDisplaySearch">
     <div class="alternate-filter-wrapper">
       <div class="filters-selected-text">
         {{ checkedList.length }} items selected
@@ -232,7 +232,7 @@
   <div *ngIf="
      !paginatorAbsent && outerArr && outerArr.length > 0 && errorValue > 0
    " class="data-table-paginator-wrap flex flex-align-center" [class.pagination-wrap]="checkBox">
-    <div class="paginator-size-selector" *ngIf="dataHead=='Policy Violations' && false">
+    <div class="paginator-size-selector" *ngIf="!doNotDisplaySearch && false">
       <label for="rowsPerPage">Rows Per Page:</label>
       <select name="rowsPerPage" id="rowsPerPage">
         <option *ngFor="let pageSize of pageSizes" [selected]="paginatorSize == pageSize"
