feat: added loader to dashboard cards and filter

--- a/webapp/src/app/shared/data-table/data-table.component.html
+++ b/webapp/src/app/shared/data-table/data-table.component.html
@@ -36,7 +36,7 @@
           [filteredArray]="filteredArray"></app-filtered-selector>
         <mat-menu #menu="matMenu" yPosition="below">
           <app-filter-dropdown [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
-            (selection)='changeFilterType($event)' (selectedFilters)="changeFilterTags($event)">
+            (selection)='changeFilterType($event)' (selectedFilters)="changeFilterTags($event)" [isFilterTagLoaded]="isFilterTagLoaded">
           </app-filter-dropdown>
         </mat-menu>
       </div>
