fix: splash screen and home page changes

--- a/webapp/src/app/landing-page/common/landing-page-header/landing-page-header.component.css
+++ b/webapp/src/app/landing-page/common/landing-page-header/landing-page-header.component.css
@@ -37,7 +37,7 @@
   display: flex;
   align-items: center;
   min-height: 80px;
-  background-color: rgba(33, 52, 68, 0.9);
+  background-color: #0e1c2c;
   padding: 0em 4em;
 }
 
