--- a/webapp/src/variables.css
+++ b/webapp/src/variables.css
@@ -62,6 +62,7 @@
   --text-medium-emphasis: #515459;
   --text-low-emphasis: #73777d;
 
+  --background-black: #000000;
   --background-white: #ffffff;
   --background-grey: #f2f3f5;
   --table-header-background: #fafafa;
