--- a/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.html
@@ -33,7 +33,7 @@
                 </mat-form-field>
             </div>
         </div>
-        <div class="search-bar-wrapper" style="padding: 16px 0px;">
+        <div class="search-bar-wrapper">
             <div class="search-bar">
                 <img src="/assets/icons/header-search.svg" alt="">
                 <input [(ngModel)]="searchTxt" placeholder="Search" type="text">
