--- a/webapp/src/app/pacman-features/modules/admin/system-management/system-management.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/system-management/system-management.component.css
@@ -17,8 +17,8 @@
   width: 100%;
   height: 100%;
   max-height: 36em;
-  border-radius: 0.2em;
-  background-color: var(--background-white) f;
+  border-radius: var(--border-radius);
+  background-color: var(--background-white);
 }
 .container {
   width: 100%;
