--- a/webapp/src/app/post-login-app/common/header/header.component.css
+++ b/webapp/src/app/post-login-app/common/header/header.component.css
@@ -51,6 +51,11 @@
   cursor: pointer;
 }
 
+::ng-deep .header-search-content-container .mat-form-field-appearance-fill .mat-form-field-flex {
+  padding: 0 !important;
+  background-color: inherit;
+}
+
 .profile {
   width: 36px;
   background-color: var(--primary-300);
