--- a/webapp/src/app/post-login-app/common/header/header.component.html
+++ b/webapp/src/app/post-login-app/common/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-wrapper">
   <div class="header-search-wrapper" (click)="handleSearch()">
-    <div class="header-search-content-container">
+    <div class="header-search-content-container flex flex-row">
       <!-- <mat-icon
         class="mat-icon"
         matPrefix
