--- a/webapp/src/app/shared/date-dropdown/date-dropdown.component.html
+++ b/webapp/src/app/shared/date-dropdown/date-dropdown.component.html
@@ -14,4 +14,10 @@
 
  <div class="date-wrapper" [formGroup]="user">
 	<!-- <picker formControlName="dateValue" [(ngModel)]="dateToday" (ngModelChange)='searchCalled($event)'></picker> -->
+	<mat-form-field appearance="outline">
+		<input matInput [matDatepicker]="picker" formControlName="dateValue" [(ngModel)]="date" (ngModelChange)='searchCalled($event)'>
+		<mat-hint>MM/DD/YYYY</mat-hint>
+		<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+		<mat-datepicker #picker></mat-datepicker>
+	</mat-form-field>
 </div>
