fix: fixed bugs related to graph, loader, empty-state

--- a/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.css
@@ -143,5 +143,5 @@ app-inventory-container{
 }
 
 ::ng-deep .mat-select-arrow-wrapper {
-  vertical-align: top !important;
+  align-items: start !important;
 }
