--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/target-types/create-update-target-types/create-update-target-types.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/target-types/create-update-target-types/create-update-target-types.component.html
@@ -42,8 +42,32 @@
                                                 <ng-select [allowClear]="true" name="exceptionDetailsForm.assetGroup" [items]="allDomainDetails" [(ngModel)]="targetTypes.domain" placeholder="Select Asset Group">
                                                 </ng-select>
                                             </div>
+                                            <div class="input-form">
+                                                <label>Select Category *</label>
+                                                <ng-select [allowClear]="true" name="exceptionDetailsForm.assetGroup" [items]="allCategoryDetails" [(ngModel)]="targetTypes.category" placeholder="Select Category">
+                                                </ng-select>
+                                            </div>
+                                            <div class="input-box">
+                                                <label>Display Name *</label>
+                                                <ul class="input-wrapper">
+                                                    <input type="text" name="displayName" class="inputarea-container" [(ngModel)]="targetTypes.displayName" placeholder="Enter Target Type Display Name" autocomplete="off">
+                                                </ul>
+                                            </div>
+                                            <div class="bm10 input-box">
+                                                <label>Description *</label>
+                                                <ul>
+                                                    <textarea name="description" class="textarea-container " [(ngModel)]="targetTypes.desc" placeholder="Enter Target Type Description"></textarea>
+                                                </ul>
+                                            </div>
 
-                                            <div class="input-box" *ngIf="isCreate">
+                                        </div>
+                                        <div class="formctnright">
+                                         <div class="input-form">
+                                                <label>Data Source *</label>
+                                                <ng-select [allowClear]="true" name="dataSource" [items]="datasourceDetails" [(ngModel)]="targetTypes.dataSource" placeholder="Select Datasource">
+                                                </ng-select>
+                                            </div>
+                                             <div class="input-box" *ngIf="isCreate">
                                                 <label>Target Type Name *</label>
                                                 <ul class="input-wrapper">
                                                     <input type="text" name="type" class="inputarea-container" [(ngModel)]="targetTypes.name" placeholder="Enter Target Type Name" autocomplete="off">
@@ -54,22 +78,7 @@
                                                 <label>Target Type Name *</label>
                                                 <div class="text-value">{{targetTypes.name}}</div>
                                             </div>
-
-                                            <div class="bm10 input-box">
-                                                <label>Description *</label>
-                                                <ul>
-                                                    <textarea name="description" class="textarea-container " [(ngModel)]="targetTypes.desc" placeholder="Enter Target Type Description"></textarea>
-                                                </ul>
-                                            </div>
-
-                                        </div>
-                                        <div class="formctnright">
-                                            <div class="input-form">
-                                                <label>Select Category *</label>
-                                                <ng-select [allowClear]="true" name="exceptionDetailsForm.assetGroup" [items]="allCategoryDetails" [(ngModel)]="targetTypes.category" placeholder="Select Category">
-                                                </ng-select>
-                                            </div>
-
+											 
                                             <div class="bm10 input-box">
                                                 <label>Config *</label>
                                                 <ul>
@@ -83,10 +92,10 @@
 
                             <div class="data-table-paginator-wrap flex flex-center flex-align-center">
                                 <a class="save-container flex flex-row-reverse" *ngIf="isCreate">
-                                    <button class="submit-btn uppercase" (click)="createTargetType(targetTypes)" [disabled]="targetTypes.name==='' || targetTypes.desc==='' || targetTypes.domain.length==0 || targetTypes.category.length==0 || targetTypes.config===''"><i class="fa fa-check"></i> CREATE</button>
+                                    <button class="submit-btn uppercase" (click)="createTargetType(targetTypes)" [disabled]="targetTypes.name==='' || targetTypes.desc==='' || targetTypes.domain.length==0 || targetTypes.dataSource.length==0 || targetTypes.category.length==0 || targetTypes.config===''"><i class="fa fa-check"></i> CREATE</button>
                                 </a>
                                 <a class="save-container flex flex-row-reverse" *ngIf="!isCreate">
-                                    <button class="submit-btn uppercase" (click)="updateTargetType(targetTypes)" [disabled]="targetTypes.name==='' || targetTypes.desc==='' || targetTypes.domain.length==0 || targetTypes.category.length==0 || targetTypes.config===''"><i class="fa fa-check"></i> UPDATE</button>
+                                    <button class="submit-btn uppercase" (click)="updateTargetType(targetTypes)" [disabled]="targetTypes.name==='' || targetTypes.desc==='' || targetTypes.domain.length==0 || targetTypes.dataSource.length==0 || targetTypes.category.length==0 || targetTypes.config===''"><i class="fa fa-check"></i> UPDATE</button>
                                 </a>
                                 <a class="save-container flex flex-row-reverse">
                                     <button class="submit-btn uppercase" type="button" (click)="navigateBack()"><i class="fa fa-remove"></i> CANCEL</button>
