--- a/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.html
@@ -50,7 +50,7 @@
                 <li *ngFor="let resource of filteredResources | assetSummarySearchFilter: searchTxt; let i = index"
                     (click)="awsTileClicked(resource)" class="flex">
                     <app-aws-app-tile [i]='i' class='full-width' [active]="selectedResource.type == resource.type"
-                        [awsResource]="resource" [awsResourceName]="resource.type" [resourceInstances]="resource.count" [assetGroup]="resource.provider">
+                        [awsResource]="resource" [awsResourceName]="resource.displayName || resource.type" [resourceInstances]="resource.count" [assetGroup]="resource.provider">
                     </app-aws-app-tile>
                 </li>
             </ul>
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="resource-details-container flex-col" *ngIf="dataLoaded">
-        <div class="resource-name-type" *ngIf="selectedResource.type !== undefined">{{selectedResource.type}}</div>
+        <div class="resource-name-type" *ngIf="selectedResource.type !== undefined">{{selectedResource.displayName || selectedResource.type}}</div>
         <div class="flex-col asset-info-container">
             <div class="asset-dist-header">Asset by application</div>
             <div class="tagged" *ngIf="selectedResource.type !== undefined">
