--- a/webapp/src/app/post-login-app/common/header/header.component.html
+++ b/webapp/src/app/post-login-app/common/header/header.component.html
@@ -1,4 +1,5 @@
 <div class="header-wrapper">
+  <img src="/assets/images/Paladin_Logo.svg" style="height: 28px;"/>
   <div class="header-search-wrapper" (click)="handleSearch()">
     <div class="header-search-content-container flex flex-row">
       <!-- <mat-icon
